--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,3 +1,8 @@
+$black: #202020;
+$white: #FFFFFF;
+$grey: #929292;
+$faded: rgba(255,255,255,0.5);
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -12,5 +17,13 @@
     width: 50px;
   }
 }
+
+html,body {
+  background-color: $black;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+}
 // injector
+@import 'main/main.sass';
+@import '../components/navbar/navbar.sass';
 // endinjector
