--- a/src/app/main/main.sass
+++ b/src/app/main/main.sass
@@ -18,6 +18,7 @@ h2
 .header
   padding-top: 16px
   padding-bottom: 14px
+  margin-bottom: 15px
   border-bottom: 1px solid rgba(235,240,241,0.34)
 
   h2
@@ -35,3 +36,20 @@ h2
     &:hover
       cursor: pointer
       color: $white
+
+.item
+  font-size: 16px
+  margin-bottom: 10px
+
+  &.synth
+    color: $green
+  &.sample
+    color: $blue
+  &:hover
+    cursor: move
+
+.folder
+  margin-top: 15px
+  .name
+    color: $white
+    font-size: 16px
