--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -11,6 +11,14 @@ html,body {
   font-weight: 300;
 }
 
+// Fix window, don't allow draggables to resize it
+body {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  overflow: hidden;
+}
+
 // disable selection on all elements, and use the default cursor everywhere
 * {
     -webkit-touch-callout:none;
@@ -27,7 +35,7 @@ html,body {
 
 // injector
 @import 'fonts.scss';
-@import 'main/main.sass';
 @import '../components/filters/filters.sass';
 @import '../components/navbar/navbar.sass';
+@import 'main/main.sass';
 // endinjector
