--- a/src/app/main/main.jade
+++ b/src/app/main/main.jade
@@ -11,14 +11,16 @@
         .col-sm-8
           .item(
             ng-repeat="item in items"
-            data-drag="true" 
-            jqyoui-draggable="{index:{{$index}}, onStart: 'startedDragging(item)', onStop: 'stoppedDragging(item)', placeholder: 'keep'}"
-            data-jqyoui-options="draggableOptions" 
-            ng-model="items"
-            ng-class="item.type") {{item.name}}
+            dnd-draggable="item"
+            dnd-effect-allowed="move"
+            dnd-moved="list.splice($index,1)"
+            ng-class="getSourceClass(item)") {{item.name}}
 
     .col-sm-2
       // todo - image for draggables goes here?
+      ul.trash(
+        dnd-list="trash"
+      )
 
     .col-sm-5
       .header
@@ -27,17 +29,17 @@
         .action load
       .row.folder(
         ng-repeat="folder in set | orderBy:'name'"
-        data-drop="true"
-        ng-model="folder.items"
-        jqyoui-droppable="{onOver: 'draggedOver(folder)', onOut: 'draggedOut(folder)', onDrop: 'dropped(folder)'}"
-        data-jqyoui-options="droppableOptions" 
       )
         .col-sm-6
           .name {{folder.name}}
         .col-sm-6
-          .item(
-            ng-repeat="item in folder.items | orderBy:'name'"
-            data-drag="true" 
-            jqyoui-draggable
-            data-jqyoui-options="draggableOptions" 
-            ng-class="{synth: item.type=='synth', sample: item.type=='sample', faded: item.dragging}") {{item.name}}
+          .items(
+            dnd-list="folder.items"
+            dnd-drop="drop(item,folder)"
+          )
+            .item(
+              ng-repeat="item in folder.items"
+              dnd-draggable="item"
+              dnd-effect-allowed="move"
+              dnd-moved="folder.items.splice(folder.items.indexOf(item),1)"
+              ng-class="{synth: item.type=='synth', sample: item.type=='sample', faded: item.dragging}") {{item.name}}
