--- a/src/app/main/main.sass
+++ b/src/app/main/main.sass
@@ -47,6 +47,8 @@ h2
     color: $blue
   &.faded
     opacity: 0.3
+  &.used
+    opacity: 0.3
   &:hover
     cursor: move
 
@@ -55,3 +57,14 @@ h2
   .name
     color: $white
     font-size: 16px
+  .items 
+    min-height: 50px
+
+ul[dnd-list], ul[dnd-list] > li
+    position: relative
+
+.trash
+  width: 100%
+  height: 500px
+  background-color: $grey
+  opacity: 0
