--- a/src/app/main/main.sass
+++ b/src/app/main/main.sass
@@ -78,3 +78,14 @@ ul[dnd-list], ul[dnd-list] > li
   height: 500px
   background-color: $grey
   opacity: 0
+
+.freespaceContainer
+
+  position: fixed
+  // background-color: red
+  padding-left: 28px
+  padding-right: 28px
+  bottom: 0
+  left: 0
+  width: 100%
+  height: 120px
