--- a/src/components/freespace/freespace.sass
+++ b/src/components/freespace/freespace.sass
@@ -3,9 +3,7 @@ freespace
 
   .wrapper
     display: block
-    display: block
-    height: 50px
-    background-color: rgba(255,255,255,0.2)
+    // background-color: rgba(255,255,255,0.2)
 
   .value
     color: $white
@@ -17,4 +15,4 @@ freespace
     height: 0
     border-left: 4px solid transparent
     border-right: 4px solid transparent
-    border-top: 6px solid #81BB84
+    border-top: 6px solid transparent
