--- a/src/app/main/main.jade
+++ b/src/app/main/main.jade
@@ -18,7 +18,7 @@
               ng-class="getSourceClass(item)") {{item.name}}
 
     .col-sm-2
-      // todo - image for draggables goes here?
+      //- todo - image for draggables goes here?
       ul.trash(
         dnd-list="trash"
       )
