--- a/src/app/main/main.sass
+++ b/src/app/main/main.sass
@@ -70,8 +70,15 @@ h2
   .items 
     min-height: 50px
 
-ul[dnd-list], ul[dnd-list] > li
-    position: relative
+    .dndPlaceholder
+      @extend .item
+      // background-color: white
+      border: 1px dashed white
+      border-radius: 3px
+      opacity: 0.1
+      display: block
+      height: 30px
+      // width: 100%
 
 .trash
   width: 100%
@@ -87,4 +94,4 @@ ul[dnd-list], ul[dnd-list] > li
   bottom: 0
   left: 0
   width: 100%
-  height: 120px
+  height: 70px
