COFFEESCRIPT ALL THE THINGS

--- a/src/app/main/main.jade
+++ b/src/app/main/main.jade
@@ -4,7 +4,7 @@
     .col-sm-5
       .header
         h2 Library
-        .action add
+        .action(ng-click="openFilepicker()") add
       .row
         .col-sm-4
           filters()
