--- a/src/components/freespace/freespace.jade
+++ b/src/components/freespace/freespace.jade
@@ -1,5 +1,5 @@
 fa-app.wrapper(
-  ng-style="{height: height+'px'}"
+  ng-style="{height: height+2+'px'}"
 )
   fa-modifier(
     fa-origin="[0.5,1]"
